fix: fix conflict

--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -937,6 +937,13 @@
       "vehicles": "Vehicles",
       "createdAt": "Created at",
       "updatedAt": "Updated at"
+    },
+    "detail": {
+      "extend": "Extend contract",
+      "extendConfirm": "Are you sure you want to extend this contract?",
+      "notice": "Termination with notice",
+      "noticeConfirm": "Are you sure you want to terminate this contract with notice?",
+      "cancel": "Unilateral termination"
     }
   },
   "meter": {
