update: update i18n payment receipt for role user

--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -1060,6 +1060,7 @@
     }
   },
   "paymentReceipt": {
+    "myPaymentReceipt": "My Payment Receipt",
     "title": "Payment Receipt",
     "titleHistory": "Deleted Payment Receipt History",
     "statistic": "Payment Receipt Statistics",
